# Projekt2

./: CMakeLists.txt
files/: graph.txt  result.txt  wyniki.txt
include/: dijkstra.h  functions.h  graph_l.h  graph_m.h  queue.h
source/: dijkstra.cpp  functions.cpp  graph_l.cpp  graph_m.cpp  main.cpp  queue.cpp
